# solisora

./: Cargo.toml  README.adoc  todo.txt
src/: main.rs  prelude.rs
src/facade/: camera.rs  mod.rs  shader.wgsl  state.rs  vertex.rs
src/facade/camera/: mod.rs
src/facade/mesh/: meshable.rs  mod.rs  planetoid.rs
src/sim/: mod.rs  planet.rs  ship.rs
src/simulation/: mod.rs
src/simulation/body/: mod.rs  orbit.rs
src/simulation/planet/: mod.rs  orbit.rs
src/simulation/ship/: mod.rs
src/ui/: camera.rs  mesh.rs  mod.rs  shader.wgsl  state.rs
src/ui/camera/: mod.rs
src/ui/mesh/: meshable.rs  mod.rs
