[package]
name = "solisora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
rand = "0.8.5"
rand_seeder = "0.2.3"
cgmath = "0.18"
strum = "0.24.1"
strum_macros = "0.24.3"
rayon = "1.5.3"
spin_sleep = "1.1.1"

[[bin]]
name = "solisora"
path = "src/main.rs"